# src/api/codegen/index.ts
@@ -25,11 +25,11 @@ export type { ExerciseSearchByType } from './models/ExerciseSearchByType';
 export type { FeedListRequest } from './models/FeedListRequest';
 export type { FoodDayStatDto } from './models/FoodDayStatDto';
 export type { FoodEntity } from './models/FoodEntity';
-export type { FoodEntityResponseData } from './models/FoodEntityResponseData';
 export type { FoodListRequest } from './models/FoodListRequest';
 export type { FoodOrderType } from './models/FoodOrderType';
 export type { FoodResponse } from './models/FoodResponse';
 export type { FoodShortDto } from './models/FoodShortDto';
+export type { FoodShortDtoResponseData } from './models/FoodShortDtoResponseData';
 export type { FoodStat } from './models/FoodStat';
 export type { ForgotPasswordRequest } from './models/ForgotPasswordRequest';
 export type { HttpValidationProblemDetails } from './models/HttpValidationProblemDetails';
