# src/api/schema/swagger.yaml
@@ -459,13 +459,13 @@ paths:
           content:
             text/plain:
               schema:
-                $ref: '#/components/schemas/FoodEntityResponseData'
+                $ref: '#/components/schemas/FoodShortDtoResponseData'
             application/json:
               schema:
-                $ref: '#/components/schemas/FoodEntityResponseData'
+                $ref: '#/components/schemas/FoodShortDtoResponseData'
             text/json:
               schema:
-                $ref: '#/components/schemas/FoodEntityResponseData'
+                $ref: '#/components/schemas/FoodShortDtoResponseData'
         '401':
           description: Unauthorized
         '403':
@@ -1374,18 +1374,6 @@ components:
         user:
           $ref: '#/components/schemas/UserEntity'
       additionalProperties: false
-    FoodEntityResponseData:
-      type: object
-      properties:
-        totalCount:
-          type: integer
-          format: int32
-        records:
-          type: array
-          items:
-            $ref: '#/components/schemas/FoodEntity'
-          nullable: true
-      additionalProperties: false
     FoodListRequest:
       type: object
       properties:
@@ -1460,6 +1448,18 @@ components:
         kcal:
           type: number
           format: float
+      additionalProperties: false
+    FoodShortDtoResponseData:
+      type: object
+      properties:
+        totalCount:
+          type: integer
+          format: int32
+        records:
+          type: array
+          items:
+            $ref: '#/components/schemas/FoodShortDto'
+          nullable: true
       additionalProperties: false
     FoodStat:
       type: object
